--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentClubApplication"
         tools:targetApi="31">
-
         <activity
-            android:name=".ui.home.clubManager.ClubManagerCalendarInfoActivity"
+            android:name=".ui.login.login.loginActivity.LoginMainActivity"
             android:exported="false" />
         <activity
             android:name=".ui.home.clubManager.ClubManagerClubInfoActivity"
@@ -29,19 +28,9 @@
         <activity
             android:name=".ui.home.clubManager.ClubManagerHomePageActivity"
             android:exported="false" />
+
         <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login_main"
-            android:theme="@style/Theme.StudentClubApplication" />
-        <activity
-            android:name=".UcuncuActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SecondActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.login.login.loginActivity.LoginMainActivity"
+            android:name=".ui.login.login.loginActivity.IntroMainActivitiy"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
